k8s-infra/cdi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cdi-external
  namespace: cdi
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.253.37
  selector:
    cdi.kubevirt.io: cdi-uploadproxy
  ports:
    - name: cdi
      port: 8443
