k8s-infra/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    namespace: envoy-gateway-system
    name: gateway
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    cert-manager.io/private-key-algorithm: ECDSA
spec:
  gatewayClassName: envoy
  addresses:
    - value: 192.168.253.34
  listeners:
    - name: forgejo-ssh
      protocol: TCP
      port: 2222
    - name: atlas-api
      protocol: TCP
      port: 8612
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: envoy-gateway-system
    - name: https-git
      protocol: HTTPS
      port: 443
      hostname: git.strypsteen.com
      tls:
        certificateRefs:
          - name: gw-git.strypsteen.com
    - name: https-matrix
      protocol: HTTPS
      port: 443
      hostname: matrix.strypsteen.com
      tls:
        certificateRefs:
          - name: gw-matrix.strypsteen.com
    - name: https-vault
      protocol: HTTPS
      port: 443
      hostname: vault.strypsteen.com
      tls:
        certificateRefs:
          - name: gw-vault.strypsteen.com
    - name: https-auth
      protocol: HTTPS
      port: 443
      hostname: auth.strypsteen.com
      tls:
        certificateRefs:
          - name: gw-auth.strypsteen.com
    - name: https-metrics
      protocol: HTTPS
      port: 443
      hostname: metrics.strypsteen.com
      tls:
        certificateRefs:
          - name: gw-metrics.strypsteen.com
      allowedRoutes:
        namespaces:
          from: All
    - name: https-cloud
      protocol: HTTPS
      port: 443
      hostname: cloud.strypsteen.com
      tls:
        certificateRefs:
          - name: gw-cloud.strypsteen.com
    - name: https-console
      protocol: HTTPS
      port: 443
      hostname: console.strypsteen.com
      tls:
        certificateRefs:
          - name: gw-console.strypsteen.com
    - name: https-console-dev
      protocol: HTTPS
      port: 443
      hostname: "*.dev.console.strypsteen.com"
      tls:
        certificateRefs:
          - name: gw-console-dev.strypsteen.com
    - name: https-strypsteen-com
      protocol: HTTPS
      port: 443
      hostname: strypsteen.com
      tls:
        certificateRefs:
          - name: gw-strypsteen.com
    - name: https-strypsteen-me
      protocol: HTTPS
      port: 443
      hostname: strypsteen.me
      tls:
        certificateRefs:
          - name: gw-strypsteen.me
    - name: https-mta-sts-com
      protocol: HTTPS
      port: 443
      hostname: mta-sts.strypsteen.com
      tls:
        certificateRefs:
          - name: gw-mta-sts.strypsteen.com
    - name: https-mta-sts-me
      protocol: HTTPS
      port: 443
      hostname: mta-sts.strypsteen.me
      tls:
        certificateRefs:
          - name: gw-mta-sts.strypsteen.me
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-internal
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    cert-manager.io/private-key-algorithm: ECDSA
spec:
  gatewayClassName: envoy
  addresses:
    - value: 192.168.253.35
  listeners:
    - name: proxy-socks5
      protocol: TCP
      port: 1080
    - name: proxy-http
      protocol: TCP
      port: 1081
    - name: unifi-api
      protocol: TCP
      port: 8080
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: envoy-gateway-system
    - name: https-aigw
      protocol: HTTPS
      port: 443
      hostname: aigw.strypsteen.com
      tls:
        certificateRefs:
          - name: gw-aigw.strypsteen.com
    - name: https-music
      protocol: HTTPS
      port: 443
      hostname: music.strypsteen.com
      tls:
        certificateRefs:
          - name: gw-music.strypsteen.com
    - name: https-photos
      protocol: HTTPS
      port: 443
      hostname: photos.strypsteen.com
      tls:
        certificateRefs:
          - name: gw-photos.strypsteen.com
    - name: https-llm
      protocol: HTTPS
      port: 443
      hostname: llm.strypsteen.com
      tls:
        certificateRefs:
          - name: gw-llm.strypsteen.com
    - name: https-network
      protocol: HTTPS
      port: 443
      hostname: network.strypsteen.com
      tls:
        certificateRefs:
          - name: gw-network.strypsteen.com
    - name: https-office
      protocol: HTTPS
      port: 443
      hostname: office.strypsteen.com
      tls:
        certificateRefs:
          - name: gw-office.strypsteen.com
    - name: https-code
      protocol: HTTPS
      port: 443
      hostname: code.strypsteen.com
      tls:
        certificateRefs:
          - name: gw-code.strypsteen.com
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: development
    - name: https-code-proxy
      protocol: HTTPS
      port: 443
      hostname: "*.code.strypsteen.com"
      tls:
        certificateRefs:
          - name: gw-code-proxy.strypsteen.com
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: development
    - name: https-code-sandbox
      protocol: HTTPS
      port: 443
      hostname: code-sandbox.strypsteen.com
      tls:
        certificateRefs:
          - name: gw-code-sandbox.strypsteen.com
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: development
    - name: https-code-sandbox-proxy
      protocol: HTTPS
      port: 443
      hostname: "*.code-sandbox.strypsteen.com"
      tls:
        certificateRefs:
          - name: gw-code-sandbox-proxy.strypsteen.com
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: development
    - name: https-monitoring
      protocol: HTTPS
      port: 443
      hostname: monitoring.strypsteen.com
      tls:
        certificateRefs:
          - name: gw-monitoring.strypsteen.com
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-redirect
  namespace: envoy-gateway-system
spec:
  parentRefs:
    - name: envoy
      namespace: apps
      sectionName: http
    - name: envoy-internal
      namespace: apps
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: policy
  namespace: apps
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy
  compressor:
    - type: Brotli
      brotli: {}
    - type: Gzip
      gzip: {}
    - type: Zstd
      zstd: {}
