k8s-infra/monitoring-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - namespace: apps
      name: envoy-internal
  hostnames:
    - monitoring.strypsteen.com
  rules:
    - backendRefs:
        - name: prometheus-grafana
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  parentRefs:
    - namespace: apps
      name: envoy
  hostnames:
    - metrics.strypsteen.com
  rules:
    - matches:
        - path:
            type: Exact
            value: /api/v1/write
      backendRefs:
        - name: prometheus-kube-prometheus-prometheus
          port: 9090
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: prometheus
  namespace: monitoring
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: prometheus
  basicAuth:
    users:
      name: metrics-auth
