k8s-infra/monitoring-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - k8s.strypsteen.com
      secretName: k8s-certificate
  rules:
    - host: monitoring.strypsteen.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - k8s.strypsteen.com
      secretName: k8s-certificate
  rules:
    - host: metrics.strypsteen.com
      http:
        paths:
          - path: /api/v1/write
            pathType: Exact
            backend:
              service:
                name: prometheus-kube-prometheus-prometheus
                port:
                  number: 9090
