k8s-infra/longhorn-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default
  namespace: longhorn-system
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: longhorn-system
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nfs
  namespace: longhorn-system
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 2049
