k8s-infra/podman.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podman
  namespace: kube-system
spec:
  selector:
    matchLabels:
      app: podman
  template:
    metadata:
      name: podman
      labels:
        app: podman
    spec:
      hostUsers: false
      volumes:
        - name: containers
          emptyDir: {}
      containers:
        - name: podman
          image: quay.io/podman/stable:v5.5.2
          command: ['podman', 'system', 'service', '-t0', 'tcp://0.0.0.0:8888']
          securityContext:
            runAsUser: 1000
            procMount: Unmasked
            seccompProfile:
              type: Unconfined
          volumeMounts:
            - name: containers
              mountPath: /home/podman/.local/share/containers
          resources:
            limits:
              squat.ai/tun: 1
---
apiVersion: v1
kind: Service
metadata:
  name: podman
  namespace: kube-system
spec:
  selector:
    app: podman
  ports:
    - port: 8888
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: podman
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      app: podman
  policyTypes:
    - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: apps
      podSelector:
        matchLabels:
          app: forgejo-runner
